* In ProtobufTlv, added utility method toName.
* Added support for the Name component type ImplicitSha256Digest, and methods:
  Name.Component.fromImplicitSha256Digest, isGeneric and isImplicitSha256Digest.
  Name.appendImplicitSha256Digest.
* Examples: In test_encode_decode_fib_entry, etc, use ProtobufTlv.toName.
* Unit tests: In test_interest_methods, added test_matches_data.

Bug fixes
* http://redmine.named-data.net/issues/2760 Respect tpm= setting in client.conf.

PyNDN v2.3beta1 (2016-05-06)
----------------------------

Breaking changes
* In encrypt/Consumer, moved ErrorCode to encrypt/EncryptError, affecting the
  onError callback to Consumer.consume.

Changes
* In MemoryContentCache.registerPrefix, added optional onRegisterSuccess. (Thanks to Zhehao Wang.)
* Added Sha256WithEcdsaSignature. Support encoding/decoding it in interests and data packets.
* In KeyChain, added generateEcdsaKeyPair and generateEcdsaKeyPairAsDefault.
* In util, added ExponentialReExpress.
* Added HmacWithSha256Signature. In KeyChain, added experimental static methods
  sign/verifyDataWithHmacWithSha256.
* Added classes Link and DelegationSet to support link objects.
* In Interest, added methods to support link objects and SelectedDelegation:
  hasLink, getLink, unsetLink, get/setLinkWireEncoding, get/setSelectedDelegationIndex.
* Added support for NDNLPv2:
  In Face.expressInterest, added an OnNetworkNack callback.
  In Interest and Data, the method getIncomingFaceId provides the incoming face ID (if configured).
* http://redmine.named-data.net/issues/3260 Added GenericSignature.
* http://redmine.named-data.net/issues/3449 Added Name.isPrefixOf and getSuccessor.
  In compare, support compare(int, int, Name, int, int).
* http://redmine.named-data.net/issues/3450 Added Name.Component.isSegment,
  isSegmentOffset, isVersion, isTimestamp and isSequenceNumber.
* http://redmine.named-data.net/issues/3451 Added static Name.Component.fromSegment,